tests/should-fail/rawcodelit-14.j
globals
    integer r = 'a\xbc'
endglobals